[package]
name = "jojo-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
anyhow = "1.0.75"
local-ip-address = "0.5.6"
